cert-manager-work.d/wildcard.d_wip/ingress_dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - sy.shermandemowild.com
    secretName: quickstart-example-tls
  rules:
  - host: sy.shermandemowild.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: web
            port:
              number: 80
